# report-generator

./: .gitignore  Makefile  README.md  pyproject.toml
.dvc/: config
client_credit_union/: __init__.py  dataset.py  features.py  plots.py
client_credit_union/modeling/: predict.py  train.py
client_credit_union/report_generator/: .env.example  README.md  config.py  config.yaml  credentials.json.example  main.py  pyproject.toml
client_credit_union/report_generator/config/: app.yaml  layout.yaml  path.yaml  report.yaml  retriever.yaml
client_credit_union/report_generator/data/output/: report_2_May_2025.docx  report_3_May_2025.docx
client_credit_union/report_generator/data/templates/: report_1.docx  report_1_appendix.docx  report_2.docx  report_2_appendix.docx  report_3.docx  report_3_appendix.docx  report_4.docx  report_4_appendix.docx  report_5.docx  report_5_appendix.docx
client_credit_union/report_generator/src/: __init__.py  data_retriever.py  utils.py
client_credit_union/report_generator/src/data/input/: credit_report.xlsx  loan_field_data.json
client_credit_union/report_generator/src/data/output/: report_1_May_2025.docx  report_2_May_2025.docx  report_3_May_2025.docx  report_4_May_2025.docx  report_5_May_2025.docx
client_credit_union/report_generator/src/data/templates/: report_1.docx  report_1_appendix.docx  report_2.docx  report_3.docx  report_4.docx  report_5.docx  report_5_appendix.docx
client_credit_union/report_generator/src/report_1_2/: context.py  generator.py  plots.py  preprocess.py
client_credit_union/report_generator/src/report_3/: context.py  generator.py  plots.py  preprocess.py  tables.py
client_credit_union/report_generator/src/report_4/: context.py  generator.py  plots.py  preprocess.py
client_credit_union/report_generator/src/report_5/: context.py  generator.py  plots.py  preprocess.py
client_credit_union/report_generator/src/utils/: __init__.py  date_utils.py  file_utils.py  google_drive_util.py  run_google_util.py
data/: interim.dvc  processed.dvc  raw.dvc
notebooks/: 1.0-ll-template.ipynb  1.0-ll-template_report_1_2.ipynb  2.0-ll-report_3.ipynb
reports/: report_1_May_2025.docx  report_4_May_2025.docx  report_5_May_2025.docx
scripts/: notebook_info.sh  save_utils.py
