[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "client_credit_union"
version = "0.0.1"
description = "Generation of Reports for Credit Union Client"
authors = [
  { name = "Leonardo Lara" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "awscli",
    "cudf-cu12==25.2.2",
    "docx2md>=1.0.3",
    "docx2pdf>=0.1.8",
    "docxtpl>=0.20.0",
    "dvc>=3.59.2",
    "dvc-s3>=3.2.0",
    "google-api-python-client>=2.171.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=6.29.5",
    "ipython",
    "jupyterlab",
    "loguru",
    "mammoth>=1.9.1",
    "markitdown>=0.1.2",
    "matplotlib",
    "msoffice2pdf>=1.0.0",
    "notebook",
    "numpy",
    "openpyxl>=3.1.5",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "spire-doc-free>=12.12.0",
    "tqdm",
    "typer",
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["client_credit_union"]
include = ["pyproject.toml", "client_credit_union/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["client_credit_union"]
force-sort-within-sections = true

